--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,1 +1,37 @@
-// Начните писать стили здесь
+@import "global/fonts.scss";
+@import "global/global.scss";
+@import "global/variables.scss";
+
+@import "blocks/page.scss";
+@import "blocks/page-body.scss";
+@import "blocks/main-header.scss";
+@import "blocks/main-logo.scss";
+@import "blocks/main-navigation.scss";
+
+@import "blocks/main.scss";
+@import "blocks/container.scss";
+@import "blocks/main-poster.scss";
+@import "blocks/our-programs.scss";
+@import "blocks/slim-program.scss";
+@import "blocks/pro-program.scss";
+@import "blocks/feature.scss";
+@import "blocks/example.scss";
+@import "blocks/stats-list.scss";
+
+@import "blocks/button.scss";
+@import "blocks/catalog.scss";
+@import "blocks/card-cart.scss";
+@import "blocks/add-goods.scss";
+@import "blocks/buy-all.scss";
+
+@import "blocks/form.scss";
+@import "blocks/radio-button.scss";
+@import "blocks/form-email-phone.scss";
+@import "blocks/form-comment.scss";
+@import "blocks/checkbox.scss";
+
+@import "blocks/main-footer.scss";
+@import "blocks/collaboration.scss";
+@import "blocks/map.scss";
+@import "blocks/social.scss";
+@import "blocks/copyright.scss";
