--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -21,3 +21,11 @@
   text-transform: uppercase;
   box-sizing: border-box;
 }
+
+.button--loadmore {
+  background-color: #f2f2f2;
+}
+
+.button__text--loadmore {
+  color: $grey-text;
+}
