--- a/source/sass/blocks/container.scss
+++ b/source/sass/blocks/container.scss
@@ -3,3 +3,12 @@
   margin: 0 auto;
   padding: 0;
 }
+
+.container-content {
+  width: 280px;
+  margin: 0 auto;
+}
+
+.container--example {
+  background-color: #eaeaea;
+}
