--- a/source/sass/blocks/buy-all.scss
+++ b/source/sass/blocks/buy-all.scss
@@ -1,13 +1,30 @@
 .buy-all {
   position: relative;
+
+  @media (min-width: $medium-width) {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  @media (min-width: $large-width) {
+    display: block;
+  }
+
     &::before {
       content: "";
       position: absolute;
-      width: 280px;
+      width: 100%;
       height: 290px;
       background-image: url("../img/catalog/cat-buy-all.png");
       background-repeat: no-repeat;
       z-index: -2;
+      background-size: cover;
+
+      @media (min-width: $medium-width) {
+        height: 200px;
+        background-position-y: 50%;
+      }
+
     }
 
     &::after {
@@ -15,10 +32,14 @@
       position: absolute;
       top: 0;
       left: 0;
-      width: 280px;
+      width: 100%;
       height: 290px;
       background-color: rgba(104, 183, 56, 0.85);
       z-index: -1;
+
+      @media (min-width: $medium-width) {
+        height: 200px;
+      }
     }
 }
 
@@ -29,6 +50,10 @@
 .buy-all__image {
   padding: 59px 101px 48px;
   display: block;
+
+  @media (min-width: $large-width) {
+    padding: 59px 80px 48px;
+  }
 
 }
 
