--- a/source/sass/blocks/form-email-phone.scss
+++ b/source/sass/blocks/form-email-phone.scss
@@ -1,5 +1,9 @@
 .form-email-phone {
   padding-bottom: 24px;
+
+  @media (min-width: $large-width) {
+    display: flex;
+  }
 }
 
 .form-email-phone__title {
