--- a/source/sass/blocks/main-logo.scss
+++ b/source/sass/blocks/main-logo.scss
@@ -1,5 +1,15 @@
 .main-logo {
+  margin-top: 10px;
 
+  @media (min-width: $medium-width) {
+    display: flex;
+    margin-top: 24px;
+  }
+
+  @media (min-width: $large-width) {
+    display: flex;
+    margin-top: 54px;
+  }
 }
 
 .main-logo__icon {
@@ -11,6 +21,10 @@
 }
 
 .main-logo__title {
+  @media (min-width: $medium-width) {
+    display: none;
+  }
+
 }
 
 .main-logo__title-image {
