--- a/source/sass/blocks/main-navigation.scss
+++ b/source/sass/blocks/main-navigation.scss
@@ -1,16 +1,22 @@
 
 .main-navigation {
 
+
 }
 
 .main-navigation__toggle{
-
+  @media (min-width: $medium-width) {
+   display: none;
+  }
 }
 
 .main-navigation__list {
   margin: 0;
   padding: 0;
   list-style-type: none;
+  @media (min-width: $medium-width) {
+    display: flex;
+  }
 }
 
 .main-navigation__item {
@@ -22,6 +28,30 @@
   font-weight: 500;
   text-transform: uppercase;
   color: #000000;
+
+  @media (min-width: $medium-width)
+    {display: inline-block;
+    padding: 42px 34px 62px 0;
+    font-size: 18px;
+    line-height: 24px;
+    font-weight: 400;
+
+    &:last-child {
+      padding-right: 0;
+    }
+    }
+
+
+
+  @media (min-width: $large-width)
+    {display: inline-block;
+    padding: 69px 37px 32px 0;
+    font-size: 18px;
+    line-height: 24px;
+    font-weight: 400;
+  }
+
+
 }
 
 
@@ -29,6 +59,9 @@
   color: #000000;
   text-decoration: none;
 
+  @media (min-width: $medium-width) {
+
+  }
 }
 
 .main-navigation__item--active {
