--- a/source/sass/blocks/page-body.scss
+++ b/source/sass/blocks/page-body.scss
@@ -4,9 +4,15 @@
   padding: 0;
   font-family: Oswald, Arial, sans-serif;
   font-weight: 400;
+  box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 
 .page-body__header-wrapper {
   margin: 20px 10px 0 20px;
+
+  @media (min-width: $medium-width)  {
+    width: $medium-width - 60px;
+  }
 }
