--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -1,5 +1,3 @@
-.main-footer__social {
-}
 
 .social {
 }
@@ -7,11 +5,15 @@
 .social__list {
   margin: 0;
   padding: 0;
+  display: flex;
+  justify-content: center;
+  gap: 24px;
 }
 
 .social__item {
   margin: 0;
   padding: 0;
+
   list-style-type: none;
 }
 
