--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -1,8 +1,9 @@
 // Viewports
 
-$tablet-width: 768px;
-$desktop-width: 1200px;
-$mobile-width-only: 767px;
+
+$large-width: 1440px;
+$medium-width: 768px;
+$small-width-only: 767px;
 
 
 //colors
