--- a/source/sass/blocks/buy-all.scss
+++ b/source/sass/blocks/buy-all.scss
@@ -10,41 +10,36 @@
     display: block;
   }
 
-    &::before {
-      content: "";
-      position: absolute;
-      width: 100%;
-      height: 290px;
-      background-image: url("../img/catalog/cat-buy-all.png");
-      background-repeat: no-repeat;
-      z-index: -2;
-      background-size: cover;
+  &::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 290px;
+    background-image: url("../img/catalog/cat-buy-all.png");
+    background-repeat: no-repeat;
+    z-index: -2;
+    background-size: cover;
 
-      @media (min-width: $medium-width) {
-        height: 200px;
-        background-position-y: 50%;
-      }
-
+    @media (min-width: $medium-width) {
+      height: 200px;
+      background-position-y: 50%;
     }
+  }
 
-    &::after {
-      content: "";
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 290px;
-      background-color: rgba(104, 183, 56, 0.85);
-      z-index: -1;
+  &::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 290px;
+    background-color: rgba(104, 183, 56, 0.85);
+    z-index: -1;
 
-      @media (min-width: $medium-width) {
-        height: 200px;
-      }
+    @media (min-width: $medium-width) {
+      height: 200px;
     }
-}
-
-.buy-all::before {
-
+  }
 }
 
 .buy-all__image {
@@ -54,13 +49,12 @@
   @media (min-width: $large-width) {
     padding: 59px 80px 48px;
   }
-
 }
 
 .buy-all__text {
   margin: 0;
   padding: 0 58px 43px 61px;
-  font-family: Arial, sans-serif;
+  font-family: "Arial", sans-serif;
   font-size: 16px;
   line-height: 20px;
   font-weight: 400;
