--- a/source/sass/blocks/checkbox.scss
+++ b/source/sass/blocks/checkbox.scss
@@ -6,7 +6,7 @@
   margin: 0;
   padding: 0;
   padding-bottom: 35px;
-  font-family: Oswald, Arial, sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 24px;
   line-height: 26px;
   font-weight: 400;
@@ -37,18 +37,21 @@
 }
 
 .checkbox__control {
+  // sometext
 }
 
 .checkbox__control-input {
+  // sometext
 }
 
 .checkbox__control-mark {
+  // sometext
 }
 
 .checkbox__control-add {
   margin: 0;
   padding: 0;
-  font-family: Oswald, Arial, sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 14px;
   line-height: 18px;
   font-weight: 400;
