--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -3,20 +3,18 @@
 }
 
 .example__content-wrapper {
-
   @media (min-width: $large-width) {
     display: flex;
-    justify-content: space-between;}
-
-
+    justify-content: space-between;
+  }
 }
 
 .example__stats-wrapper {
-
+  // sometext
 }
 
 .example__slider-wrapper {
-
+  // sometext
 }
 
 .example__title {
@@ -24,7 +22,7 @@
   padding: 0;
   padding-top: 25px;
   padding-bottom: 40px;
-  font-family: Oswald, Arial, sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 36px;
   line-height: 40px;
   font-weight: 400;
@@ -40,7 +38,7 @@
   margin: 0;
   padding: 0;
   padding-bottom: 20px;
-  font-family: Arial, sans-serif;
+  font-family: "Arial", sans-serif;
   font-size: 14px;
   line-height: 18px;
   font-weight: 400;
@@ -67,7 +65,7 @@
 .example__text-cost {
   margin: 0;
   padding: 0;
-  font-family: Oswald, Arial, sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 14px;
   line-height: 20px;
   font-weight: 400;
@@ -77,9 +75,11 @@
 }
 
 .example__slider {
+  // sometext
 }
 
 .example__cats-image {
+  // sometext
 }
 
 .example__cat-fat {
@@ -94,13 +94,14 @@
 }
 
 .example__cats-image--fat {
+  // sometext
 }
 
 .example__cats-image--slim {
+  // sometext
 }
 
 .example__range {
-
   @media (min-width: $medium-width) {
     display: flex;
     justify-content: center;
@@ -108,17 +109,18 @@
 }
 
 .example__range-scale {
+  // sometext
 }
 
 .example__range-bar {
-
+  // sometext
 }
 
 .example__range-text {
   margin: 0;
   padding: 0;
   padding-bottom: 8px;
-  font-family: Oswald, Arial, sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 16px;
   line-height: 20px;
   font-weight: 400;
@@ -127,4 +129,5 @@
 }
 
 .example__range-toggle {
+  // sometext
 }
