--- a/source/sass/blocks/form-email-phone.scss
+++ b/source/sass/blocks/form-email-phone.scss
@@ -10,7 +10,7 @@
   margin: 0;
   padding: 0;
   padding-bottom: 35px;
-  font-family: Oswald, Arial, sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 24px;
   line-height: 26px;
   font-weight: 400;
@@ -26,7 +26,7 @@
 .form-email-phone__label {
   margin: 0;
   padding: 0;
-  font-family: Oswald, Arial, sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 14px;
   line-height: 18px;
   font-weight: 400;
@@ -36,13 +36,17 @@
 }
 
 .form-email-phone__wrapper {
+  // sometext
 }
 
 .form-email-phone__field-text {
+  // sometext
 }
 
 .form-email-phone__field-text--email {
+  // sometext
 }
 
 .form-email-phone__field-text--phone {
+  // sometext
 }
