--- a/source/sass/blocks/main-footer.scss
+++ b/source/sass/blocks/main-footer.scss
@@ -1,5 +1,5 @@
 .main-footer {
-
+  // sometext
 }
 
 .main-footer__wrapper {
@@ -7,7 +7,6 @@
 }
 
 .main-footer__wrapper-content {
-
   @media (min-width: $medium-width) {
     display: flex;
     justify-content: space-between;
@@ -21,12 +20,13 @@
 }
 
 .main-footer__icon {
-
+  // sometext
 }
 
 .main-footer__copyright {
-
+  // sometext
 }
 
 .main-footer__social {
+  // sometext
 }
