--- a/source/sass/blocks/our-programs.scss
+++ b/source/sass/blocks/our-programs.scss
@@ -13,7 +13,6 @@
   @media (min-width: $medium-width) {
     padding-left: 52px;
   }
-
 }
 
 .our-programs__title {
@@ -23,7 +22,7 @@
   padding-top: 30px;
   padding-left: 91px;
   padding-bottom: 29px;
-  font-family: Oswald, Arial, sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 24px;
   line-height: 37px;
   font-weight: 400;
@@ -69,6 +68,7 @@
 
 .our-programs__title-pro {
   position: relative;
+
   &::before {
     content: "";
     position: absolute;
@@ -98,7 +98,7 @@
 .our-programs__text {
   margin: 0;
   padding: 0 20px 38px 33px;
-  font-family: Arial, sans-serif;
+  font-family: "Arial", sans-serif;
   font-size: 14px;
   line-height: 18px;
   font-weight: 400;
@@ -120,7 +120,7 @@
 .our-programs__link {
   position: relative;
   padding-left: 20px;
-  font-family: Oswald, Arial, sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 16px;
   line-height: 16px;
   font-weight: 400;
@@ -145,7 +145,4 @@
     left: 125px;
     background: no-repeat 0 0 url("../img/our-programs/arrow.svg");
   }
-
-
-
 }
