--- a/source/sass/blocks/radio-button.scss
+++ b/source/sass/blocks/radio-button.scss
@@ -15,10 +15,13 @@
 }
 
 .radio-button__control {
+  // sometext
 }
 
 .radio-button__control-input {
+  // sometext
 }
 
 .radio-button__control-mark {
+  // sometext
 }
