--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -1,5 +1,5 @@
-
 .social {
+  // sometext
 }
 
 .social__list {
@@ -18,14 +18,17 @@
 }
 
 .social__link {
+  // sometext
 }
 
 .social__link--vkontakte {
+  // sometext
 }
 
-
 .social__link--youtube {
+  // sometext
 }
 
 .social__link--telegram {
+  // sometext
 }
