--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -1,14 +1,12 @@
 // Viewports
 
-
 $large-width: 1440px;
 $medium-width: 768px;
 $small-width-only: 767px;
 
-
 //colors
 
 $white-color: #ffffff;
-$green-btn: #68B738;
+$green-btn: #68b738;
 $black-color: #000000;
 $grey-text: #444444;
