--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -12,7 +12,7 @@
   margin: 0;
   padding: 0;
   padding-bottom: 29px;
-  font-family: Oswald, Arial, sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 14px;
   line-height: 14px;
   font-weight: 400;
