--- a/source/sass/blocks/card-cart.scss
+++ b/source/sass/blocks/card-cart.scss
@@ -1,5 +1,6 @@
 
 .card-cart {
+  // sometext
 }
 
 .card-cart__image {
@@ -12,7 +13,7 @@
   margin: 0;
   padding: 0;
   padding-bottom: 18px;
-  font-family: Oswald, Arial, sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-style: normal;
   font-size: 16px;
   line-height: 20px;
@@ -23,13 +24,14 @@
 }
 
 .card-cart__info {
+  // sometext
 }
 
 .card-cart__string {
   margin: 0;
   padding: 0;
   padding-bottom: 29px;
-  font-family: Arial, sans-serif;
+  font-family: "Arial", sans-serif;
   font-size: 12px;
   line-height: 16px;
   font-weight: 400;
@@ -38,13 +40,15 @@
 }
 
 .card-cart__cell {
+  // sometext
 }
 
 .card-cart__link {
-
+  // sometext
 }
 
 .card-cart--loadmore {
+  // sometext
 }
 
 .card-cart__title--loadmore {
@@ -55,7 +59,7 @@
   margin: 0;
   padding: 0;
   padding-bottom: 21px;
-  font-family: Arial, sans-serif;
+  font-family: "Arial", sans-serif;
   font-size: 12px;
   line-height: 16px;
   font-weight: 400;
