--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -1,10 +1,11 @@
 .catalog {
+  // sometext
 }
 
 .catalog__title {
   margin: 0;
   padding: 27px 0 41px;
-  font-family: Oswald, Arial, sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-style: normal;
   font-size: 36px;
   line-height: 36px;
@@ -15,6 +16,7 @@
 }
 
 .catalog__list-wrapper {
+  // sometext
 }
 
 .catalog__list {
@@ -30,11 +32,9 @@
   @media (min-width: $large-width) {
     grid-template-columns: 1fr 1fr 1fr 1fr;
   }
-
 }
 
 .catalog__item {
   margin: 0;
-  padding: 0;
   padding: 19px 0 25px;
 }
