--- a/source/sass/blocks/collaboration.scss
+++ b/source/sass/blocks/collaboration.scss
@@ -12,7 +12,7 @@
 .collaboration__title {
   margin: 0;
   padding: 0;
-  font-family: Oswald, Arial, sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 16px;
   line-height: 20px;
   font-weight: 400;
@@ -28,7 +28,7 @@
 .collaboration__address-street {
   margin: 0;
   padding: 0;
-  font-family: Arial, sans-serif;
+  font-family: "Arial", sans-serif;
   font-style: normal;
   font-size: 14px;
   line-height: 20px;
@@ -39,7 +39,7 @@
 .collaboration__address-city {
   margin: 0;
   padding: 0;
-  font-family: Arial, sans-serif;
+  font-family: "Arial", sans-serif;
   font-style: normal;
   font-size: 14px;
   line-height: 20px;
