--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -7,7 +7,7 @@
 .copyright__text {
   margin: 0;
   padding: 0;
-  font-family: Arial, sans-serif;
+  font-family: "Arial", sans-serif;
   font-size: 16px;
   line-height: 18px;
   font-weight: 400;
@@ -15,5 +15,5 @@
 }
 
 .copyright__link {
-
+  // sometext
 }
