--- a/source/sass/blocks/feature.scss
+++ b/source/sass/blocks/feature.scss
@@ -6,7 +6,7 @@
   margin: 0;
   padding: 0;
   padding-bottom: 40px;
-  font-family: Oswald, Arial, sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 36px;
   line-height: 40px;
   font-weight: 400;
@@ -36,19 +36,19 @@
 
   @media (min-width: $medium-width) {
     &::after {
-     counter-increment: section;
-     content: counters(section,"1");
-     position: absolute;
-     font-size: 280px;
-     line-height: 280px;
-     color: #f2f2f2;
-     text-align: center;
-     margin: 5px 10px;
-     top: -64px;
-     left: 140px;
-     z-index: -1;
+      counter-increment: section;
+      content: counters(section, "1");
+      position: absolute;
+      font-size: 280px;
+      line-height: 280px;
+      color: #f2f2f2;
+      text-align: center;
+      margin: 5px 10px;
+      top: -64px;
+      left: 140px;
+      z-index: -1;
     }
-   }
+  }
 }
 
 .features__text {
@@ -57,7 +57,7 @@
   padding: 0;
   padding-bottom: 20px;
   padding-left: 80px;
-  font-family: Arial, sans-serif;
+  font-family: "Arial", sans-serif;
   font-size: 14px;
   line-height: 18px;
   font-weight: 400;
@@ -68,11 +68,9 @@
     padding-top: 111px;
     padding-left: 0;
   }
-
 }
 
 .features__text-leaf {
-
   &::before {
     content: "";
     position: absolute;
@@ -87,12 +85,9 @@
       height: 80px;
     }
   }
-
-
 }
 
 .features__text-boil {
-
   &::before {
     content: "";
     position: absolute;
@@ -107,7 +102,6 @@
       height: 80px;
     }
   }
-
 }
 
 .features__text-cutlery {
@@ -125,7 +119,6 @@
       height: 80px;
     }
   }
-
 }
 
 .features__text-alarm {
@@ -143,5 +136,4 @@
       height: 80px;
     }
   }
-
 }
