--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -1,5 +1,5 @@
 .form {
-
+  // sometext
 }
 
 .form__from-wrapper {
@@ -11,7 +11,7 @@
 .form__title {
   margin: 0;
   padding: 27px 0 37px;
-  font-family: Oswald, Arial, sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-style: normal;
   font-size: 36px;
   line-height: 36px;
@@ -25,7 +25,7 @@
   margin: 0;
   padding: 0;
   padding-bottom: 39px;
-  font-family: Oswald, Arial, sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 14px;
   line-height: 18px;
   font-weight: 400;
@@ -35,7 +35,7 @@
 }
 
 .form__form {
-
+  // sometext
 }
 
 .form__form-field {
@@ -49,12 +49,13 @@
 }
 
 .form-field__item {
+  // sometext
 }
 
 .form-field__label {
   margin: 0;
   padding: 0;
-  font-family: Oswald, Arial, sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 14px;
   line-height: 18px;
   font-weight: 400;
@@ -68,24 +69,29 @@
 }
 
 .form-field__field-text {
+  // sometext
 }
 
 .form-field__field-text--name {
+  // sometext
 }
 
 .form-field__field-text--weight {
+  // sometext
 }
 
 .form-field__field-text--age {
+  // sometext
 }
 
 .form__check {
+  // sometext
 }
 
 .radio-button__control-program {
   margin: 0;
   padding: 0;
-  font-family: Oswald, Arial, sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 14px;
   line-height: 18px;
   font-weight: 400;
@@ -100,12 +106,13 @@
 }
 
 .form__button-text {
+  // sometext
 }
 
 .form__remark {
   margin: 0;
   padding: 21px 62px 4px;
-  font-family: Arial, sans-serif;
+  font-family: "Arial", sans-serif;
   font-size: 14px;
   line-height: 16px;
   font-weight: 400;
