--- a/source/sass/blocks/main-navigation.scss
+++ b/source/sass/blocks/main-navigation.scss
@@ -1,12 +1,10 @@
-
 .main-navigation {
-
-
+  // sometext
 }
 
-.main-navigation__toggle{
+.main-navigation__toggle {
   @media (min-width: $medium-width) {
-   display: none;
+    display: none;
   }
 }
 
@@ -14,6 +12,7 @@
   margin: 0;
   padding: 0;
   list-style-type: none;
+
   @media (min-width: $medium-width) {
     display: flex;
   }
@@ -22,15 +21,15 @@
 .main-navigation__item {
   padding: 22px;
   text-align: center;
-  font-family: Oswald, Arial, sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 20px;
   line-height: 20px;
   font-weight: 500;
   text-transform: uppercase;
   color: #000000;
 
-  @media (min-width: $medium-width)
-    {display: inline-block;
+  @media (min-width: $medium-width) {
+    display: inline-block;
     padding: 42px 34px 62px 0;
     font-size: 18px;
     line-height: 24px;
@@ -39,31 +38,23 @@
     &:last-child {
       padding-right: 0;
     }
-    }
+  }
 
-
-
-  @media (min-width: $large-width)
-    {display: inline-block;
+  @media (min-width: $large-width) {
+    display: inline-block;
     padding: 69px 37px 32px 0;
     font-size: 18px;
     line-height: 24px;
     font-weight: 400;
   }
-
-
 }
 
 
 .main-navigation__link {
   color: #000000;
   text-decoration: none;
-
-  @media (min-width: $medium-width) {
-
-  }
 }
 
 .main-navigation__item--active {
-
+  // sometext
 }
