--- a/source/sass/blocks/main-poster.scss
+++ b/source/sass/blocks/main-poster.scss
@@ -9,63 +9,62 @@
     padding-bottom: 267px;
   }
 
+  &::before {
+    content: "";
+    position: absolute;
+    width: 320px;
+    height: 302px;
+    background-image: url("../img/poster/back-cat.png");
+    background-repeat: no-repeat;
+    z-index: -2;
 
-    &:before {
-      content: "";
-      position: absolute;
-      width: 320px;
-      height: 302px;
-      background-image: url("../img/poster/back-cat.png");
-      background-repeat: no-repeat;
-      z-index: -2;
-
-      @media (min-width: $medium-width) {
-        display: none;
-      }
-
-      @media (min-width: $large-width) {
-        content: "";
-        position: absolute;
-        top: 0;
-        right: 0;
-        width: 720px;
-        min-height: 694px;
-        background-image: url("../img/poster/back-cat-desktop.png");
-        z-index: -2;
-      }
+    @media (min-width: $medium-width) {
+      display: none;
     }
 
-    &:after {
+    @media (min-width: $large-width) {
       content: "";
       position: absolute;
       top: 0;
-      left: 0;
-      width: 320px;
-      height: 302px;
+      right: 0;
+      width: 720px;
+      min-height: 694px;
+      background-image: url("../img/poster/back-cat-desktop.png");
+      z-index: -2;
+    }
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 320px;
+    height: 302px;
+    background-color: rgba(104, 183, 56, 0.85);
+    z-index: -1;
+
+    @media (min-width: $medium-width) {
+      display: none;
+    }
+
+    @media (min-width: $large-width) {
+      content: "";
+      position: absolute;
+      top: 0;
+      right: 0;
+      width: 720px;
+      min-height: 694px;
       background-color: rgba(104, 183, 56, 0.85);
       z-index: -1;
-
-      @media (min-width: $medium-width) {
-        display: none;
-      }
-
-      @media (min-width: $large-width) {
-        content: "";
-        position: absolute;
-        top: 0;
-        right: 0;
-        width: 720px;
-        min-height: 694px;
-        background-color: rgba(104, 183, 56, 0.85);
-        z-index: -1;
-      }
     }
+  }
 }
 
 .main-poster__title {
   margin: 0;
   padding: 27px 0 29px;
-  font-family: Oswald, Arial, sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-style: normal;
   font-size: 36px;
   line-height: 36px;
@@ -85,16 +84,14 @@
 
   @media (min-width: $large-width) {
     padding-left: 190px;
-
   }
-
 }
 
 .main-poster__text {
   margin: 0;
   padding: 0;
   padding-bottom: 29px;
-  font-family: Oswald, Arial, sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 14px;
   line-height: 14px;
   font-weight: 400;
@@ -110,9 +107,9 @@
     color: $black-color;
     text-align: start;
   }
+
   @media (min-width: $large-width) {
     padding-left: 190px;
-
   }
 }
 
@@ -136,15 +133,13 @@
   }
 
   @media (min-width: $large-width) {
-
     top: 200px;
     left: 590px;
   }
-
 }
 
 .main-poster__button-wrapper {
-    margin: 0 auto;
+  margin: 0 auto;
 }
 
 .main-poster__link {
@@ -158,7 +153,7 @@
   box-sizing: border-box;
 
   @media (min-width: $medium-width) {
-    margin-left: 91px;;
+    margin-left: 91px;
   }
 
   @media (min-width: $large-width) {
