--- a/source/sass/blocks/page-body.scss
+++ b/source/sass/blocks/page-body.scss
@@ -2,7 +2,7 @@
   min-height: 100%;
   margin: 0;
   padding: 0;
-  font-family: Oswald, Arial, sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-weight: 400;
   box-sizing: border-box;
   overflow-x: hidden;
@@ -12,7 +12,7 @@
 .page-body__header-wrapper {
   margin: 20px 10px 0 20px;
 
-  @media (min-width: $medium-width)  {
+  @media (min-width: $medium-width) {
     width: $medium-width - 60px;
   }
 }
