--- a/source/sass/blocks/stats-list.scss
+++ b/source/sass/blocks/stats-list.scss
@@ -1,5 +1,4 @@
 .stats-list {
-
   @media (min-width: $medium-width) {
     display: flex;
   }
@@ -14,7 +13,7 @@
   margin: 0;
   padding: 0;
   padding-bottom: 8px;
-  font-family: Oswald, Arial, sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 24px;
   line-height: 24px;
   font-weight: 400;
@@ -25,7 +24,7 @@
   margin: 0;
   padding: 0;
   font-size: 12px;
-  font-family: Arial, sans-serif;
+  font-family: "Arial", sans-serif;
   line-height: 100%;
   font-weight: 400;
   color: $grey-text;
