--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: Oswald;
+  font-family: "Oswald";
   src: url("../fonts/oswaldmedium.woff2") format("woff2"), url("../fonts/oswaldmedium.woff") format("woff");
   font-style: normal;
   font-weight: 400;
@@ -7,7 +7,7 @@
 }
 
 @font-face {
-  font-family: Oswald;
+  font-family: "Oswald";
   src: url("../fonts/oswaldmedium.woff2") format("woff2"), url("../fonts/oswaldmedium.woff") format("woff");
   font-style: normal;
   font-weight: 500;
