--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,13 +1,12 @@
 @import "global/fonts.scss";
 @import "global/global.scss";
 @import "global/variables.scss";
-
+@import "global/reset-list.scss";
 @import "blocks/page.scss";
 @import "blocks/page-body.scss";
 @import "blocks/main-header.scss";
 @import "blocks/main-logo.scss";
 @import "blocks/main-navigation.scss";
-
 @import "blocks/main.scss";
 @import "blocks/container.scss";
 @import "blocks/main-poster.scss";
@@ -17,19 +16,16 @@
 @import "blocks/feature.scss";
 @import "blocks/example.scss";
 @import "blocks/stats-list.scss";
-
 @import "blocks/button.scss";
 @import "blocks/catalog.scss";
 @import "blocks/card-cart.scss";
 @import "blocks/add-goods.scss";
 @import "blocks/buy-all.scss";
-
 @import "blocks/form.scss";
 @import "blocks/radio-button.scss";
 @import "blocks/form-email-phone.scss";
 @import "blocks/form-comment.scss";
 @import "blocks/checkbox.scss";
-
 @import "blocks/main-footer.scss";
 @import "blocks/collaboration.scss";
 @import "blocks/map.scss";
